.metadata/.plugins/org.eclipse.cdt.ui/Project_09_Protocol_Serial_Decodification.build.log
16:32:50 **** Build of configuration Debug for project Project_09_Protocol_Serial_Decodification ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F072xB -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'Protocolo':
../Core/Src/main.c:295:5: warning: 'main' is normally a non-static function [-Wmain]
  295 | int main(void)
      |     ^~~~
../Core/Src/main.c:415:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  415 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:450:13: error: invalid storage class for function 'MX_GPIO_Init'
  450 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:487:1: error: expected declaration or statement at end of input
  487 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:78:13: warning: 'MX_GPIO_Init' used but never defined
   78 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:79:13: warning: 'MX_USART2_UART_Init' used but never defined
   79 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:477:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  477 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:450:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  450 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:415:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  415 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:372:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  372 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:295:5: warning: 'main' defined but not used [-Wunused-function]
  295 | int main(void)
      |     ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:32:50 Build Failed. 4 errors, 8 warnings. (took 583ms)

